# SICP

./: BST.rkt  README.md  closures.rkt  queue.rkt  scheme-lisp-fp.md  stack.rkt
00-intro/: ps1_1.scm
01-twenty-one/: ps2tw1.scm
06-pict-lang/: ps4hnd.tex
6.001-psets/01-twenty-one/: ps2tw1.scm
6.001-psets/02-graphing-hof/: curves.scm
book-code/: ch2.lhs  ch2.scm  ch3.scm
haskell/: SICP.cabal  ch2.lhs  stack.yaml
haskell/src/SICP/: Chapter2.lhs  Utils.hs
haskell/src/SICP/Chapter5/: RegisterMachine.hs
