name:                SICP
version:             0.1.0.0
synopsis:            SICP exercises implemented in Haskell
homepage:            https://github.com/themattchan/SICP#readme
license:             BSD3
license-file:        LICENSE
author:              Matthew Chan
maintainer:          matt@parametri.city
copyright:           2015--2017 Matthew Chan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SICP.Utils
                     , SICP.Chapter2
                     , SICP.Chapter5.RegisterMachine
  build-depends:       base >= 4.7 && < 5
                     , transformers
                     , containers
                     , primes
  default-language:    Haskell2010

-- executable SICP-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , SICP
--   default-language:    Haskell2010

test-suite SICP-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , SICP
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/themattchan/sicp
